--- a/public/search/index.html
+++ b/public/search/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="content-type" content="text/html; charset=utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
       <title>KompetenzwerkD</title>     
-      <link rel="stylesheet" href="https://kompetenzwerkd.github.io/main.css">
+      <link rel="stylesheet" href="https://kompetenzwerkd.github.io/infoportal/main.css">
     </head>
 
     <body>
@@ -15,7 +15,7 @@
         <nav>
 
           <div class="logo">
-          <img src="https:&#x2F;&#x2F;kompetenzwerkd.github.io&#x2F;images&#x2F;logo.png">
+          <img src="https:&#x2F;&#x2F;kompetenzwerkd.github.io&#x2F;infoportal&#x2F;images&#x2F;logo.png">
 
           <br />
           <div id="submenu">
@@ -45,9 +45,9 @@
         <ul class="search-results__items"></ul>
     </div>
 
-    <script src="https://kompetenzwerkd.github.io/elasticlunr.min.js"></script>
-    <script src="https://kompetenzwerkd.github.io/search_index.en.js"></script>
-    <script src="https://kompetenzwerkd.github.io/search.js"></script>
+    <script src="https://kompetenzwerkd.github.io/infoportal/elasticlunr.min.js"></script>
+    <script src="https://kompetenzwerkd.github.io/infoportal/search_index.en.js"></script>
+    <script src="https://kompetenzwerkd.github.io/infoportal/search.js"></script>
 
 
           </div>
