--- a/public/digitales_arbeiten/index.html
+++ b/public/digitales_arbeiten/index.html
@@ -19,8 +19,8 @@
 
           <br />
           <div id="submenu">
-            <a href="/">Über uns</a> | <a href="/impressum">Impressum</a> | 
-            <a href="/search">Suche</a>    
+            <a href="/infoportal">Über uns</a> | <a href="/infoportal/impressum">Impressum</a> | 
+            <a href="/infoportal/search">Suche</a>    
           </div>
         
     <ul id="breadcrumbs">
