--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
         <nav>
 
           <div class="logo">
-          <img src="https:&#x2F;&#x2F;kompetenzwerkd.github.io&#x2F;infoportal&#x2F;images&#x2F;logo.png">
-
+          <img id="logo-big" src="https:&#x2F;&#x2F;kompetenzwerkd.github.io&#x2F;infoportal&#x2F;images&#x2F;logo.png">
+          <img id="logo-small" src="https:&#x2F;&#x2F;kompetenzwerkd.github.io&#x2F;infoportal&#x2F;images&#x2F;logo-small.png">
           <br />
           <div id="submenu">
             <a href="/infoportal">Über uns</a> | <a href="/infoportal/impressum">Impressum</a> | 
@@ -56,7 +56,6 @@
         
         
         </nav>
-        <div id="placeholder"></div>
 
 
         <main>
