--- a/public/fdm/fahrplan/index.html
+++ b/public/fdm/fahrplan/index.html
@@ -110,7 +110,7 @@
   <article>
     <h1 id="der-fdm-fahrplan-schritt-fur-schritt-zum-datenmanagement">Der &quot;FDM-Fahrplan&quot; - Schritt-für-Schritt zum Datenmanagement<a class="zola-anchor" href="#der-fdm-fahrplan-schritt-fur-schritt-zum-datenmanagement" aria-label="Anchor link for: der-fdm-fahrplan-schritt-fur-schritt-zum-datenmanagement">🔗</a></h1>
 <p>Dieser kleine Fahrplan verdeutlicht, wann welche Fragestellungen rund um das Forschungsdatenmanagement im Projekt eine Rolle spielen sollten. Viele der hier geschilderten Aspekte folgen aber ohnehin direkt aus dem hoffentlich früh erstellten Datenmanagementplan.</p>
-<p><a href="/fdm/">Forschungsdatenmanagement (FDM)</a> spielt in jeder Phase Ihres Forschungsprojektes eine Rolle. Idealerweise beginnt dieser Prozess in der Antragsphase - auch um nötige personelle und finanzielle Aufwände einzuplanen - mit der Entwicklung einer passenden Gesamtstrategie. Während der Projektlaufzeit sollte eine kontinuierliche Anpassung und Umsetzung dieser Planungen erfolgen. So kann effektives kollaboratives Arbeiten mit anfallenden Daten gewährleistet werden ohne Aspekte wie Datensicherheit oder Nachhaltigkeit zu vernachlässigen. Dieser Prozess gipfelt in der Regel in der Zugänglichmachung von Forschungsdaten und Forschungsergebnissen entsprechend grundlegender Prinzipien wie FAIR spätestens gegen Projektende.</p>
+<p><a href="https://kompetenzwerkd.github.io/infoportal/fdm/">Forschungsdatenmanagement (FDM)</a> spielt in jeder Phase Ihres Forschungsprojektes eine Rolle. Idealerweise beginnt dieser Prozess in der Antragsphase - auch um nötige personelle und finanzielle Aufwände einzuplanen - mit der Entwicklung einer passenden Gesamtstrategie. Während der Projektlaufzeit sollte eine kontinuierliche Anpassung und Umsetzung dieser Planungen erfolgen. So kann effektives kollaboratives Arbeiten mit anfallenden Daten gewährleistet werden ohne Aspekte wie Datensicherheit oder Nachhaltigkeit zu vernachlässigen. Dieser Prozess gipfelt in der Regel in der Zugänglichmachung von Forschungsdaten und Forschungsergebnissen entsprechend grundlegender Prinzipien wie FAIR spätestens gegen Projektende.</p>
 <p>Zeitnah werden an dieser Stelle auch praktische Erfahrungen zum Forschungsdatenmanagement anhand von Beispiel-Projekten der KompetenzwerkD-Partner vorgestellt. Erfahrungen und Ergebnisse aus diesen Fallbeispielen können eine wertvolle Grundlage für aktuelle und zukünftige Projekte - wie auch das Ihrige - darstellen.</p>
 <h2 id="antragsphase">Antragsphase<a class="zola-anchor" href="#antragsphase" aria-label="Anchor link for: antragsphase">🔗</a></h2>
 <ul>
@@ -124,7 +124,7 @@
 <li>Ihrem KompetenzwerkD</li>
 </ul>
 </li>
-<li><a href="/fdm/plan/">Datenmanagementplan (DMP) erstellen</a>: Gemeinsam gilt es, als Grundlage der zukünftigen Arbeit mit Forschungsdaten, möglichst frühzeitig spätere Abläufe zu planen. Dies erleichtert den Start ins Projekt, da von Anfang an grundlegende Aspekte der zukünftigen Arbeit mit den Forschungsdaten feststehen, z. B. im Hinblick auf Stellenkategorien. Auch sichert dieser Ablauf die nachhaltige Aufbewahrung der Forschungsergebnisse, indem ungünstige Adhoc-Entscheidungen für grundlegende Fragestellungen verhindert werden. Zudem wird es ermöglicht, gegebenenfalls eine personelle und finanzielle Abschätzung möglicher Aufwände vor Antragsstellung zu erstellen.</li>
+<li><a href="https://kompetenzwerkd.github.io/infoportal/fdm/plan/">Datenmanagementplan (DMP) erstellen</a>: Gemeinsam gilt es, als Grundlage der zukünftigen Arbeit mit Forschungsdaten, möglichst frühzeitig spätere Abläufe zu planen. Dies erleichtert den Start ins Projekt, da von Anfang an grundlegende Aspekte der zukünftigen Arbeit mit den Forschungsdaten feststehen, z. B. im Hinblick auf Stellenkategorien. Auch sichert dieser Ablauf die nachhaltige Aufbewahrung der Forschungsergebnisse, indem ungünstige Adhoc-Entscheidungen für grundlegende Fragestellungen verhindert werden. Zudem wird es ermöglicht, gegebenenfalls eine personelle und finanzielle Abschätzung möglicher Aufwände vor Antragsstellung zu erstellen.</li>
 </ul>
 <h2 id="projektphase-1-zu-beginn-des-projekts">Projektphase 1 - Zu Beginn des Projekts<a class="zola-anchor" href="#projektphase-1-zu-beginn-des-projekts" aria-label="Anchor link for: projektphase-1-zu-beginn-des-projekts">🔗</a></h2>
 <ul>
@@ -136,7 +136,7 @@
 <li>Erstkontakt mit Forschungsdatenrepositorium zur späteren Veröffentlichung/Archivierung herstellen (falls nicht bei Erstellung des DMP geschehen)</li>
 </ul>
 </li>
-<li>Metadaten (MD) anlegen und soweit möglich ausfüllen: Nutzen Sie hierfür gern unsere <a href="/fdm/metadaten-schemas/">Vorlagen</a>.</li>
+<li>Metadaten (MD) anlegen und soweit möglich ausfüllen: Nutzen Sie hierfür gern unsere <a href="https://kompetenzwerkd.github.io/infoportal/fdm/metadaten-schemas/">Vorlagen</a>.</li>
 </ul>
 <h2 id="projektphase-2-wahrend-des-projekts">Projektphase 2 - Während des Projekts<a class="zola-anchor" href="#projektphase-2-wahrend-des-projekts" aria-label="Anchor link for: projektphase-2-wahrend-des-projekts">🔗</a></h2>
 <ul>
