fixed impressum and search links

--- a/public/search/index.html
+++ b/public/search/index.html
@@ -33,7 +33,8 @@
           </div>
         
     <ul id="breadcrumbs">
-        <li><a href="/">KompetenzwerkD</a>&nbsp;&#8594;&nbsp;</li>
+        
+        <li><a href="/">Home</a>&nbsp;&#8594;&nbsp;</li>
         <li><h4>Suche</h4></li>
     </ul>
 
