--- a/public/fdm/fahrplan/index.html
+++ b/public/fdm/fahrplan/index.html
@@ -142,7 +142,12 @@
 <ul>
 <li>Datenhaltungsstrategie überprüfen:
 <ul>
-<li>Werden die Planungen eingehalten?</li>
+<li>Werden die Planungen eingehalten?
+<ul>
+<li>Ist die Sicherheit personenbezogener Daten durch Abweichungen gefährdet?</li>
+<li>Greift die Backup-Strategie?</li>
+</ul>
+</li>
 <li>Eventuell: Nötige Korrekturen oder Umplanungen vornehmen</li>
 </ul>
 </li>
