--- a/public/fdm/forschungsdaten-policy/index.html
+++ b/public/fdm/forschungsdaten-policy/index.html
@@ -76,7 +76,8 @@
 
   <article>
     <h1 id="forschungsdaten-policy">Forschungsdaten-Policy<a class="zola-anchor" href="#forschungsdaten-policy" aria-label="Anchor link for: forschungsdaten-policy">🔗</a></h1>
-<p>In Arbeit.</p>
+<p>An dieser Stelle soll zukünftig eine gemeinsame Frschungsdaten-Policy der am KompetenzwerkD beteiligten Institutionen zu finden sein. Diese ist zurzeit in Entsehung.</p>
+<p>Ziel ist es dabei, gemeinsame Ansichten zum korrekten Umgang mit Forschungsdaten zusammenzutragen, ohne dabei die Partner in ihrer fachspezifischen Ausgestaltung dises Themenkomplexes einzuschränken.</p>
 
   </article>
 
