--- a/public/digitales_publizieren/ausstellungen/index.html
+++ b/public/digitales_publizieren/ausstellungen/index.html
@@ -107,8 +107,8 @@
 <h2 id="vorbemerkungen-und-danksagungen">Vorbemerkungen und Danksagungen:<a class="zola-anchor" href="#vorbemerkungen-und-danksagungen" aria-label="Anchor link for: vorbemerkungen-und-danksagungen">🔗</a></h2>
 <p>Dieser Leitfaden entstammt jahrelanger praktischer Erfahrung im Projekt- und Museumsmanagement und Kuratieren (national und international) sowie diesbezüglicher Lehrtätigkeit an Universitäten, Museen und Schulen. Ein besonderer Dank geht an Caroline Böhme, PD Dr. Nadja Braun, Mareike Greb für jahrelange Kooperation sowie dem Studium bei Dr. Angela Göllnitz.</p>
 <p>Ist in diesem Leitfaden allgemein von “Ausstellung” die Rede, bezieht sich dies sowohl auf analoge als auch auf digitale Ausstellungen bzw. hybride Formen.</p>
-<p><strong>Legende</strong>: 
-Der Pfeil ➜ führt zu Beispielen und Tipps.
+<p><strong>Legende</strong>: </p>
+<p>Der Pfeil ➜ führt zu Beispielen und Tipps.
 Unter diesem Zeichen ✪ finden Sie Orientierungsfragen, wie Sie praxisorientiert in Ihrem Haus eine Ausstellung realisieren können.
 Unter ➤ wird auf weitere Abschnitte dieses Leitfadens verwiesen.</p>
 <h2 id="pramissen">Prämissen:<a class="zola-anchor" href="#pramissen" aria-label="Anchor link for: pramissen">🔗</a></h2>
