updated readme + new build

--- a/public/fdm/plan/index.html
+++ b/public/fdm/plan/index.html
@@ -240,8 +240,8 @@ Datenurheber, Mitwirkende, Kontakt, Förderprogramm usw.)</li>
 <li>Legen Sie dar, inwieweit die Wahl der Datenformate eine langfristige Nutzung ermöglicht.</li>
 <li>In der Regel bietet sich die Zusammenarbeit mit einem externen Forschungsdatenrepositorium oder einem Archiv an, insofern Ihr Institut keine eigenen Lösungen anbietet. Nutzen Sie gegebenenfalls die Repositoriensuche in der <a href="https://www.re3data.org/">Registry of Research Data Repositories</a> zum Aufspüren fachspezifischer Repositorien  und nehmen Sie frühzeitig Kontakt auf</li>
 <li>Die Übergabe der Forschungsdaten (häufig zu Projektende/Dienstende) sollte im DMP von Beginn an genau festgelegt werden, um eine gute Lösung für alle Beteiligten zu finden.</li>
-<li>Sie müssen keine Pläne für Daten aus Archiven, mit denen Sie arbeiten, erstellen, sondern nur für Ihre im Projekt erstellten Forschungsdaten.
-Eine niederschwellige Variante für Langzeitdatenarchivierung ist die Publikation der Daten im Repositorium “Zenodo” des CERN in der Schweiz. Unsere Empfehlung: Speichern Sie Ihre Daten in möglichst “einfachen” Formaten - beispielsweise Datenbank-Daten in CSV-Dateien -, erstellen Sie strukturierte Metadaten dazu und schreiben Sie ein Dokument (“readme”-Datei) mit weiteren Informationen, die für eine korrekte Interpretation und Nachnutzung wichtig sind. Sie können alles in einem ZIP-Archiv sozusagen “pur” in Zenodo ablegen (dies erfüllt auch Open Access-Anforderungen).
+<li>Sie müssen keine Pläne für Daten aus Archiven, mit denen Sie arbeiten, erstellen, sondern nur für Ihre im Projekt erstellten Forschungsdaten.</li>
+<li>Eine niederschwellige Variante für Langzeitdatenarchivierung ist die Publikation der Daten im Repositorium “Zenodo” des CERN in der Schweiz. Unsere Empfehlung: Speichern Sie Ihre Daten in möglichst “einfachen” Formaten - beispielsweise Datenbank-Daten in CSV-Dateien -, erstellen Sie strukturierte Metadaten dazu und schreiben Sie ein Dokument (“readme”-Datei) mit weiteren Informationen, die für eine korrekte Interpretation und Nachnutzung wichtig sind. Sie können alles in einem ZIP-Archiv sozusagen “pur” in Zenodo ablegen (dies erfüllt auch Open Access-Anforderungen).
 Für größere Datenmengen (z. B. umfangreiches Bild- und Videomaterial) werden andere Lösungen zur Langzeitdatenarchivierung benötigt. Hier könnte in Sachsen die SLUB mögliche Lösungen bieten.</li>
 </ul>
 <h3 id="datenverfugbarkeit-auffindbarkeit-zugriffsbeschrankungen">Datenverfügbarkeit (Auffindbarkeit, Zugriffsbeschränkungen)<a class="zola-anchor" href="#datenverfugbarkeit-auffindbarkeit-zugriffsbeschrankungen" aria-label="Anchor link for: datenverfugbarkeit-auffindbarkeit-zugriffsbeschrankungen">🔗</a></h3>
@@ -262,10 +262,10 @@ Für größere Datenmengen (z. B. umfangreiches Bild- und Videomaterial) werden 
 </ul>
 <h2 id="schritt-4-erstellen-des-dmp">Schritt 4: Erstellen des DMP<a class="zola-anchor" href="#schritt-4-erstellen-des-dmp" aria-label="Anchor link for: schritt-4-erstellen-des-dmp">🔗</a></h2>
 <p>Füllen Sie ihr Dokument entsprechend der gewählten Gliederung mit den relevanten Angaben zu Projekt- und Forschungsdaten. Halten Sie bei unerwartet auftretenden Unklarheiten am besten Rücksprache.</p>
+<p>Allgemein gilt: Forschung ist nicht immer (vollständig) planbar! Nicht alles müssen Sie sofort festlegen - manches kann im Projektverlauf ergänzt werden. </p>
 <h2 id="schritt-5-die-oben-genannten-leitfaden-decken-nicht-alle-ihre-bedarfe-ab-und-sie-haben-fragen">Schritt 5: Die oben genannten Leitfäden decken nicht alle Ihre Bedarfe ab und Sie haben Fragen?<a class="zola-anchor" href="#schritt-5-die-oben-genannten-leitfaden-decken-nicht-alle-ihre-bedarfe-ab-und-sie-haben-fragen" aria-label="Anchor link for: schritt-5-die-oben-genannten-leitfaden-decken-nicht-alle-ihre-bedarfe-ab-und-sie-haben-fragen">🔗</a></h2>
 <p>Es gibt zahlreiche Handbücher und Checklisten, die viele Fragestellungen abdecken. Wir empfehlen:</p>
 <ul>
-<li>Forschung ist nicht immer planbar: Nicht alles müssen Sie sofort festlegen - manches kann im Projektverlauf ergänzt werden.</li>
 <li><a href="https://depositonce.tu-berlin.de//handle/11303/8372">den FDMentor der HU Berlin</a> (PDF, 32 S.)</li>
 <li><a href="https://univerlag.uni-goettingen.de/handle/3/isbn-978-3-86488-032-2">den Leitfaden vom WissGrid-Projekt der Uni Göttingen</a> (PDF, 122 S.)</li>
 <li><a href="https://www.fdm.uni-hannover.de/de/kurz-erklaert/empfehlungen/">Empfehlungen der Universität Hannover zum Umgang mit Forschungsdaten</a></li>
